# rust_training_2023_shanghai

./: .gitignore  .rustfmt.toml  Cargo.toml  presentation.odp  tasks.md  tasks_day3.md
.cargo/: config.toml
as_ref_mut/: Cargo.toml
as_ref_mut/src/: main.rs
basic_data/: Cargo.toml
basic_data/src/: hash.rs  int.rs  opt.rs  str.rs  vec.rs
basic_syntax/: Cargo.toml
basic_syntax/src/: main.rs  with_error.rs
clap_practice/: Cargo.toml
clap_practice/src/: main.rs
cs_tcp/: Cargo.toml
cs_tcp/src/: cli.rs  srv.rs
cs_yaml/: Cargo.toml
cs_yaml/src/: srv.rs
cs_yaml_lab/: Cargo.toml
cs_yaml_lab/src/: abc.rs  cli.rs
custom_serde/: Cargo.toml
custom_serde/src/: main.rs
day2_tasks/: Cargo.toml
day2_tasks/src/: task1.rs  task2.rs  task3.rs
day3_tasks/: Cargo.toml
day3_tasks/src/: task1.rs  task2.rs  task3.rs
ffi_demo/: Cargo.toml  Makefile
ffi_demo/src/: lib.rs  rabc.h
ffi_demo/tests/: rabc_test.c
from_demo/: Cargo.toml
from_demo/src/: main.rs
libcs_yaml/: Cargo.toml  Makefile
libcs_yaml/src/: cli.rs  cs_yaml.h  error.rs  info.rs  lib.rs  logger.rs
libcs_yaml/tests/: cs_yaml_test.c
librabc/: README.md
libz-sys/: Cargo.toml  build.rs  wrapper.h
libz-sys/src/: lib.rs
lock_and_thread/: Cargo.toml
lock_and_thread/src/: main.rs
logging_demo/: Cargo.toml
logging_demo/src/: do_something.rs  main.rs
macro_demo/src/: main.rs
mem_mgmt/: Cargo.toml
mem_mgmt/src/: main.rs
mpsc_demo/: Cargo.toml
mpsc_demo/src/: main.rs
play/: Cargo.toml
play/src/: lib.rs
runtime_static/: Cargo.toml
runtime_static/src/: main.rs
rust_async_workshop/: Cargo.toml  README.md  async_sleep_executor.rs  async_sleep_thread.rs  correct_async_sleep.rs  get_devconf_web_title.rs  simple_foobar.rs  wrong_async_sleep.rs
smart_ptr/: Cargo.toml
smart_ptr/src/: box.rs  box_rec.rs  deref.rs  rc.rs  ref_cell.rs
test_demo/src/: main.rs
use_clib/: Cargo.toml
use_clib/src/: main.rs
user/: Cargo.toml
user/src/: main.rs
vec_change_capacity/: Cargo.toml  a  a.cpp
vec_change_capacity/src/: main.rs
