[workspace]
resolver = "2"
members = [
    "as_ref_mut",
    "basic_data",
    "basic_syntax",
    "lock_and_thread",
    "macro_demo",
    "mem_mgmt",
    "clap_practice",
    "mpsc_demo",
    "vec_change_capacity",
    "cs_tcp",
    "smart_ptr",
    "cs_yaml",
    "custom_serde",
    "logging_demo",
]
