[package]
name = "custom_serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock"] }
nix = { version = "0.27.1", default-features = false, features = ["feature", "hostname"] }
serde = { version = "1.0.188", default-features = false, features = ["derive", "std"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
