[package]
name = "cs_yaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cs_yaml"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.20"
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock"] }
nix = { version = "0.27.1", default-features = false, features = ["feature", "hostname"] }
serde = { version = "1.0.188", default-features = false, features = ["derive", "std"] }
serde_yaml = "0.9.25"
once_cell = "1.18.0"
serde_json = "1.0.107"
